my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ESWITCH/ESWITCH.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESWITCH.dml:8:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESWITCH.dml:12:5: error ESWITCH: malformed switch statement: statement before first case label
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESWITCH.dml:17:5: error ESWITCH: malformed switch statement: statement before first case label
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESWITCH.dml:24:5: error ESWITCH: malformed switch statement: case label after default label
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESWITCH.dml:31:5: error ESWITCH: malformed switch statement: duplicate default label
